--- a/about.html
+++ b/about.html
@@ -66,7 +66,7 @@
         <h2> In Business since 2022</h2>
         <p class="mb-6">We are a father and son duo, where we take great pride in our professionalism, timeliness,
             superior customer service, and quality work. We strive to develop a lasting relationship 
-            so that then ext time service is needed there will be no question on who to call. Satisfaction guaranteed! Call us today!</p>
+            so that next time service is needed there will be no question on who to call. Satisfaction is guaranteed! Call us today!</p>
         <h2>Ho We Got Started</h2>
         <p>I chose to work in this industry because I want to see SouthWest Missouri prosper and grow, and it would be an honor 
             to be a part of that growth. 
