--- a/index.html
+++ b/index.html
@@ -127,17 +127,13 @@
        <div class="social-media">
             <p>Connect with us :</p>
             <div class="social-icons">
-              <a href="#">
+              <a href="https://www.facebook.com/profile.php?id=100082570179931"
+                target= "_blank" >
                 <i class="fab fa-facebook-f fa-border"></i>
               </a>
-              <a href="#">
-                <i class="fab fa-twitter fa-border"></i>
-              </a>
-              <a href="#">
+              <a href="https://www.instagram.com/ipeexcavation/"
+              target="_blank">
                 <i class="fab fa-instagram fa-border"></i>
-              </a>
-              <a href="#">
-                <i class="fab fa-linkedin-in fa-border"></i>
               </a>
             </div>
           </div>
