--- a/services.html
+++ b/services.html
@@ -58,8 +58,7 @@
       </nav>
 
 <div class="container">
-        <div class="description">
-            
+  <div class="description">
       <div class="contentServices">
         <h1 style="font-size:25px; font-weight:bold;">Need a resedential excavation? </br> We do it all!</h1>
         <h2 class="services-text"> Septic System Installation</h2>
@@ -67,14 +66,13 @@
              <li>Advanced and basic sytems</li>
             </ul>
         <h2 class="services-text" >Any Residential Excavation</h2>
-        <ul class="col-ser mb-4"> 
+        <ul class="col-ser mb-6"> 
                     <li>Footing dig out</li>
                     <li>Forest and shrub clearing</li>
                     <li>Site preparation</li>
                     <li>Building demolition</li>
                     <li>Pool dig out</li>
                     <li>Lot clearing and leveling</li>
-         
         </ul>
         <h2 class="services-text"> Underground Utilities</h2>
         <ul class="col-ser"> 
@@ -125,7 +123,6 @@
               </div>
           </div>
         </div>
-
       </div>
     </div>
 
@@ -149,16 +146,15 @@
       </div>
       <div class="social-icons-foot">
         <a
-          href="https://www.instragram.com/iryna.codes"
+          href="https://www.instagram.com/ipeexcavation/"
           target="_blank"
           title="instragram Profile" >
-          <i class="fab fa-instagram"></i>
+          <i class="fab fa-instagram fa-border"></i>
         </a>
-        <a
-          href="https://www.twitter.com/iryna"
+        <a href="https://www.facebook.com/profile.php?id=100082570179931"
           target="_blank"
-          title="Twitter Profile">
-          <i class="fab fa-twitter"></i>
+          title="Facebook Profile" >
+        <i class="fab fa-facebook-f fa-border"></i>
         </a>
       </div>
 </div>
