--- a/services.html
+++ b/services.html
@@ -50,7 +50,7 @@
                 <a class="nav-link nav-element" href="services.html" title="Our Services">Our Services</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link nav-element" href="index.html" title="Request Estimate">Free Estimate Request</a>
+                <a class="nav-link nav-element" href="index.html#estimate" title="Request Estimate">Free Estimate Request</a>
               </li>
             </ul>
           </div>
