about social links connection

--- a/about.html
+++ b/about.html
@@ -102,19 +102,16 @@
           </div>
           <div class="social-icons-foot">
             <a
-              href="https://www.instragram.com/iryna.codes"
-              target="_blank"
-              title="instragram Profile"
-            >
-              <i class="fab fa-instagram"></i>
-            </a>
-            <a
-              href="https://www.twitter.com/iryna"
-              target="_blank"
-              title="Twitter Profile"
-            >
-              <i class="fab fa-twitter"></i>
-            </a>
+            href="https://www.instagram.com/ipeexcavation/"
+            target="_blank"
+            title="instragram Profile" >
+            <i class="fab fa-instagram fa-border"></i>
+          </a>
+          <a href="https://www.facebook.com/profile.php?id=100082570179931"
+            target="_blank"
+            title="Facebook Profile" >
+          <i class="fab fa-facebook-f fa-border"></i>
+          </a>
           </div>
     </div>
         </footer>
