--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
             <input type="text" name="name" class="input" placeholder="Address *" required/>
           </div>
           <div class="input-container textarea">
-            <textarea name="message" class="input" class="input" placeholder="Please tell us a little bit about your project *"></textarea>
+            <textarea name="message" class="input" class="input" id="text-12" placeholder="Please tell us a little bit about your project *"></textarea>
           </div>
           <input type="hidden" name="recaptcha_response" id="recaptchaResponse">
 
