--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
 
 <div class="container">
     <div class="description">
-        <div class="row mb-5">
+      <div class="row">
+        <div class="col-sm-6 col-md-8">
             <div class="col">
       
         <h2 style="margin: 5px;"> Septic System Installation</h2>
@@ -89,12 +90,14 @@
                     <li>Any septic system maintenance</li>
         </ul>
     </div>
-        <div class="image">
+        </div>
+    
+        <div class="col-sm-12 col-md-6 col-lg-4" class="image"  class="image-responsive">
             <img src="images/project1.jpg">
           </div>
               </div>
     </div>
-
+</div>
 </div>
 </div>
 </div>
