--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
           </div>
           <div class="information">
             <img src="images/email.png" class="icon" alt="" />
-            <p>iryna.agafonov@gmail.com</p>
+            <p>ipexcavations@gmail.com</p>
           </div>
           <div class="information">
             <img src="images/phone.png" class="icon" alt="" />
