--- a/services.html
+++ b/services.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IPE Excavation</title>
+    <title>IPE Excavation - Septic System Installation</title>
+    <meta name="description" content="The purpose of the company is to develop, proper, and grow SouthWest Missouri by provididng excavation services.">
+    <meta name="keywords" content="excavation Rogersville Springfield Missouri, septic system installation, undeground utilities, demolition, septic system, septic excavation, excavation and septic, trench work, pool, lot clearing, leveling, site preparation">
+
     <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
     rel="stylesheet"
@@ -86,42 +89,42 @@
             <div class="row mx-0">
                 <div class="col-md-3 mb-4">
                   <img
-                    src="images/project1.jpg"
+                    src="images/project1-min.jpg" alt="septic"
                     class="mb-4 rounded"/>
                 </div>
                 <div class="col-md-3 mb-4">
                   <img
-                    src="images/project3.jpeg"
+                    src="images/project3-min.JPEG" alt="undeground utilities"
                     class="mb-4 rounded"/>
                 </div>
                 <div class="col-md-3 mb-4">
                   <img
-                    src="images/project4.jpeg"
+                    src="images/project4-min.JPEG" alt="footing dig out"
                     class="mb-4 rounded"/>
                 </div>
                 <div class="col-md-3 mb-4">
                   <img
-                    src="images/project2.jpeg"
+                    src="images/project2-min.JPEG" alt="building demolition"
                     class="mb-4 rounded"/>
                 </div>
                 <div class="col-md-3 mb-4">
                   <img
-                    src="images/project5.JPEG"
+                    src="images/project5-min.JPEG" alt="forest and shrub clearing"
                     class="mb-4 rounded"/>
                 </div>
                 <div class="col-md-3 mb-4">
                   <img
-                    src="images/project6.jpeg"
+                    src="images/project6-min.JPEG" alt="site preparation"
                     class="mb-4 rounded"/>
                     </div>
                     <div class="col-md-3 mb-4">
                       <img
-                        src="images/project8.JPEG"
+                        src="images/project8-min.JPEG" alt="septic excavation"
                         class=" mb-4 rounded"/>
                     </div>
                     <div class="col-md-3 mb-4">
                       <img
-                        src="images/project9.JPEG"
+                        src="images/project9-min.JPEG" alt="septic installation"
                         class="mb-4 rounded"/>
                     </div>
                 </div>
@@ -150,7 +153,8 @@
           
         </div>
         <div>
-          <p class="pfoot">(417) 300-0046 </br> (417) 813-4526</p>
+          <p class="pfoot">(417) 300-0046 </br> (417) 813-4526</p> 
+          <p class="pfoot">Springfield,</br> Missouri</p> 
         </div>
         <div class="social-icons-foot">
           <a
