--- a/about.html
+++ b/about.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IPE Excavation</title>
+    <title>IPE Excavation - Septic System Installation</title>
+    <meta name="description" content="The purpose of the company is to develop, proper, and grow SouthWest Missouri by provididng excavation services.">
+    <meta name="keywords" content="excavation Rogersville, Springfield, Missouri, septic system installation, septic system, undeground utilities, demolition, septic excavation, excavation and septic, trench work, pool, lot clearing, leveling, site preparation">
     <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
     rel="stylesheet"
@@ -97,6 +99,7 @@
           </div>
           <div>
             <p class="pfoot">(417) 300-0046 </br> (417) 813-4526</p>
+            <p class="pfoot">Springfield,</br> Missouri</p> 
           </div>
           <div class="social-icons-foot">
             <a
