--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IPE Excavation</title>
+    <title>IPE Excavation - Septic System Installation</title>
+    <meta name="description" content="The purpose of the company is to develop, proper, and grow SouthWest Missouri by provididng excavation services.">
+    <meta name="keywords" content="excavation Rogersville, Springfield, Missouri, septic system installation, undeground utilities, demolition, septic system, septic excavation, excavation and septic, trench work, pool, lot clearing, leveling, site preparation">
     <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
     rel="stylesheet"
@@ -93,7 +95,7 @@
         </div>
     
         <div class="col-sm-12 col-md-6 col-lg-4" class="image"  class="image-responsive">
-            <img src="images/project1.jpg">
+            <img src="images/project1-min.jpg" alt="excavation">
           </div>
               </div>
     </div>
