--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     rel="stylesheet"
     integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
     crossorigin="anonymous"/>
-    <link rel="icon" type="images/icon" href="./images/favicon.ico">
+    <link rel="icon" type="image/icon" href="/images/favicon.ico"/>
   <link rel="stylesheet" href="styles/IPE.css" />
 
   <script
