--- a/about.html
+++ b/about.html
@@ -7,6 +7,8 @@
     <title>IPE Excavation - Septic System Installation</title>
     <meta name="description" content="The purpose of the company is to develop, proper, and grow SouthWest Missouri by provididng excavation services.">
     <meta name="keywords" content="excavation Rogersville, Springfield, Missouri, septic system installation, septic system, undeground utilities, demolition, septic excavation, excavation and septic, trench work, pool, lot clearing, leveling, site preparation">
+    <link rel="icon" type="image/icon" href="/images/favicon.ico"/>
+
     <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
     rel="stylesheet"
