contact form activation

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
        
       <div class="contact-form">
 
-        <form action="https://api.web3forms.com/submit" method="POST">
+        <form action=”mailto:iryna.agafonov@gmail.com” method=”POST” enctype=”text/plain” name=”EmailForm”>
           <input type="hidden" name="access_key" value="45d4d71e-66f3-4461-9a01-b21e1ea6a19a">
           <h3 class="title">Contact us</h3>
           <div class="input-container">
@@ -168,7 +168,6 @@
           </div>
           <input type="hidden" name="recaptcha_response" id="recaptchaResponse">
 
-          <input type="hidden" name="redirect" value="https://web3forms.com/success">
           <div class="submit">
             <input type="submit" value="Send" id="form_button" />
           </div>
