--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       </nav>
 
       <header id="header" role="banner">
-          <div id="logoWrapper" class="title-logo-wrapper" data-content-field="site-title">
+          <div id="logoWrapper" data-content-field="site-title">
             <h1 id="logoImage"> <img src="images/whitelogo.png" class="img-fluid-picture"/> </h1>
         </div>
         <a href="#estimate" class="btn btn-branding-outline">
@@ -68,16 +68,17 @@
           </a>
     </header>
 
-<div class="container">
-    <div class="description">
-      <div class="row">
-        <div class="col-sm-6 col-md-8">
-            <div class="col">
-      
-        <h2 style="margin: 3px;"> Septic System Installation</h2>
+<section>
+    <div class="container">
+      <div class="row no-gutter" >
+        <div class="col1">
+      <div class="anim">
+        <h2> Septic System Installation</h2>
         <ul class="columns">
              <li>Advanced and basic sytems</li>
             </ul>
+            </div>
+            <div class="anim">
         <h2 style="margin: 3px;">Any Residential Excavation</h2>
         <ul class="columns"> 
                     <li>Footing dig out</li>
@@ -87,19 +88,21 @@
                     <li>Pool dig out</li>
                     <li>Lot clearing and leveling</li>
         </ul>
+        </div>
+        <div class="anim">
         <h2 style="margin: 3px;"> Underground Utilities</h2>
         <ul class="columns"> 
-                    <li>Trench work for gas, water, and electric lines</li>
+                    <li>Trench work for gas, water, and electric lines</li> </br>
                     <li>Any septic system maintenance</li>
         </ul>
-    </div>
         </div>
-    
-        <div class="col-sm-12 col-md-6 col-lg-4" class="image"  class="image-responsive">
-            <img src="images/project1-min.jpg" alt="excavation">
+
+        <div class="col">
+            <img src="images/project1-min.jpg" class="img-fluid" class="anim" alt="excavation"/>
           </div>
-              </div>
+        </div>
     </div>
+    </section>
 </div>
 </div>
 </div>
@@ -177,9 +180,7 @@
     </div>
   </div>
 
-  <script>function myFunction() {
-    document.getElementById("myForm").reset();
-}</script>
   
+  <script src="app.js"></script>
 </body>
 </html>
