--- a/services.html
+++ b/services.html
@@ -65,11 +65,11 @@
     <div class="description">
         <div class="contentServices">
         <div class="row mb-5">
-            <div class="col">
-                <h1 style="font-size:25px; font-weight:bold;">Need a resedential excavation? </br> We do it all!</h1>
+            <div class="col-s">
+                <h1 style="font-size:25px; font-weight:bold; color: white">Need a resedential excavation? </br> We do it all!</h1>
                 <h2 class="services-text"> Septic System Installation</h2>
                 <ul class="col-ser">
-                     <li>Advanced and basic sytems</li>
+                     <li>Advanced and basic systems</li>
                     </ul>
                 <h2 class="services-text" >Any Residential Excavation</h2>
                 <ul class="col-ser mb-6"> 
