--- a/about.html
+++ b/about.html
@@ -78,7 +78,7 @@
             We describe our business as Family owned and operated. 
         </p>
         <h2 class="about"> Our Goals</h2>
-        <p>My father and I want to grow as a quality based companay to bring satisfaction to every customer!</p>
+        <p>My father and I want to grow as a quality-based company to bring satisfaction to every customer!</p>
 
 </div>
 </div>
